--- a/src/styles/components/benefits.sass
+++ b/src/styles/components/benefits.sass
@@ -6,24 +6,22 @@
 		+lg
 			margin-bottom: 20px
 	&__list
-		display: flex
-		flex-flow: row wrap
-		justify-content: center
 		margin: 0 -15px
+		font-size: 0
+		text-align: center
 	&__item
 		$parent: &
+		display: inline-block
+		vertical-align: top
 		width: 25%
-		flex-basis: 25%
 		padding: 0 12px 40px
 		text-align: center
 		+lg
 			padding: 0 12px 15px
 		+sm
 			width: 33.33333%
-			flex-basis: 33.33333%
 		+xs
 			width: 100%
-			flex-basis: 100%
 		
 		&:hover #{$parent}-pic
 			transform: rotate(720deg) scale(1.25)
