--- a/src/styles/components/benefits.sass
+++ b/src/styles/components/benefits.sass
@@ -6,9 +6,11 @@
 		+lg
 			margin-bottom: 20px
 	&__list
-		margin: 0 -15px
+		margin: 0 -12px
 		font-size: 0
 		text-align: center
+		+xs
+			margin: 0 -10px
 	&__item
 		$parent: &
 		display: inline-block
@@ -22,6 +24,7 @@
 			width: 33.33333%
 		+xs
 			width: 100%
+			padding: 0 10px 15px
 		
 		&:hover #{$parent}-pic
 			transform: rotate(720deg) scale(1.25)
