--- a/src/styles/components/project.sass
+++ b/src/styles/components/project.sass
@@ -14,6 +14,8 @@
 		flex-wrap: wrap
 		justify-content: center
 		margin: 0 -15px
+		+xs
+			margin: 0 -10px
 	&__item
 		width: 33.333333%
 		flex-basis: 33.333333%
@@ -25,6 +27,7 @@
 		+xs
 			width: 100%
 			flex-basis: 100%
+			padding: 0 10px
 		&-pic
 			display: flex
 			justify-content: center
