--- a/src/styles/components/info.sass
+++ b/src/styles/components/info.sass
@@ -7,8 +7,7 @@
 		padding: 75px 0
 		text-align: center
 		+lg
-			padding: 50px 0 0
-			height: 100%
+			padding: 0 0 70px
 		+sm
 			padding: 0 0 100px
 			height: auto
