--- a/src/styles/components/footer.sass
+++ b/src/styles/components/footer.sass
@@ -20,3 +20,23 @@
 		.logo__descr
 			visibility: visible
 			opacity: 1
+	&_landing
+	&_landing &__container
+		padding: 70px 15px 30px
+		height: auto
+		+xs
+			padding: 0 15px
+	&_landing &__logo
+		flex-shrink: 0
+		+sm
+			flex-basis: 250px
+		+xs
+			flex-basis: auto
+	&_landing .info-block_footer
+		flex-basis: auto
+		padding-left: 25px
+		+xs
+			padding-left: 0
+	&_landing .info-block__tel
+		margin-left: 20px
+		margin-right: 10px
