--- a/src/styles/components/learn.sass
+++ b/src/styles/components/learn.sass
@@ -1,5 +1,5 @@
 .learn
-	background: #207bd2
+	background: #207bd2 url("../img/bg/nuts_bg.png") repeat 50% 50%
 	&__container
 	&__title
 		margin-bottom: 40px
