--- a/src/styles/components/scroll-up.sass
+++ b/src/styles/components/scroll-up.sass
@@ -1,4 +1,5 @@
-.fp-viewing-12 .scroll-up
+.fp-viewing-12 .scroll-up,
+.fp-viewing-15 .scroll-up
 	opacity: 1
 	visibility: visible
 	
@@ -24,6 +25,8 @@
 		display: block
 		bottom: 30px
 		right: 40px
+	&_yellow a
+		background: #ffcc00
 	a
 		border-radius: 50%
 		display: block
