--- a/src/styles/components/thanks.sass
+++ b/src/styles/components/thanks.sass
@@ -1,5 +1,5 @@
 .thanks
-	background: #24a849
+	background: #24a849 url("../img/bg/bubles_bg.png") repeat 50% 50%
 	text-align: center
 	&__container
 		max-width: 1300px
