--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -33,4 +33,10 @@
 @import 'components/ask'
 @import 'components/scroll-up'
 @import 'components/choose'
+@import 'components/subs-block'
+@import 'components/expert'
+@import 'components/spec'
+@import 'components/schedule'
+@import 'components/contact'
+@import 'libs/select2'
 @import 'hamburgers/hamburgers'
