--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -4,6 +4,12 @@
   fill: #010002;
   stroke: initial;
 }
+.icon-check {
+  width: 1.28em;
+  height: 1em;
+  fill: #0162a7;
+  stroke: initial;
+}
 .icon-facebook {
   width: 1em;
   height: 1em;
@@ -20,6 +26,12 @@
   width: 1em;
   height: 1em;
   fill: #222;
+  stroke: initial;
+}
+.icon-quote {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
   stroke: initial;
 }
 .icon-right-arrow {
