--- a/src/styles/partials/letters-spr.sass
+++ b/src/styles/partials/letters-spr.sass
@@ -1,44 +1,107 @@
-.icon-letter-k, .icon-letter-t, .icon-letter-f, .icon-letter-v, .icon-letter-d, .icon-letter-n, .icon-letter-l, .icon-letter-b
+.icon-letter-k, .icon-letter-o, .icon-letter-b-mod, .icon-letter-c, .icon-letter-u,
+.icon-letter-t, .icon-letter-a, .icon-letter-f, .icon-letter-v, .icon-letter-m,
+.icon-letter-d, .icon-letter-n, .icon-letter-i, .icon-letter-bottle, .icon-letter-l,
+.icon-letter-bottle-m, .icon-letter-b, .icon-letter-r, .icon-letter-e, .icon-letter-z
 	display: inline-block
 	vertical-align: middle
 	background: url("../img/icons/letters-spr.png") no-repeat
 
 .icon-letter-k
-	background-position: -5px -0px
+	background-position: -4px -0px
 	width: 133px
 	height: 105px
 
+.icon-letter-o
+	background-position: -4px -109px
+	width: 119px
+	height: 120px
+
+.icon-letter-b-mod
+	background-position: -4px -233px
+	width: 117px
+	height: 131px
+
+.icon-letter-c
+	background-position: -4px -368px
+	width: 117px
+	height: 128px
+
+.icon-letter-u
+	background-position: -4px -500px
+	width: 113px
+	height: 102px
+
 .icon-letter-t
-	background-position: -5px -110px
+	background-position: -4px -606px
 	width: 99px
 	height: 106px
 
+.icon-letter-a
+	background-position: -4px -716px
+	width: 98px
+	height: 90px
+
 .icon-letter-f
-	background-position: -5px -221px
+	background-position: -4px -810px
 	width: 98px
 	height: 105px
 
 .icon-letter-v
-	background-position: -5px -331px
+	background-position: -4px -919px
 	width: 96px
 	height: 115px
 
+.icon-letter-m
+	background-position: -4px -1038px
+	width: 95px
+	height: 79px
+
 .icon-letter-d
-	background-position: -5px -451px
+	background-position: -4px -1121px
 	width: 92px
 	height: 129px
 
 .icon-letter-n
-	background-position: -5px -585px
+	background-position: -4px -1254px
 	width: 90px
 	height: 105px
 
+.icon-letter-i
+	background-position: -4px -1363px
+	width: 89px
+	height: 101px
+
+.icon-letter-bottle
+	background-position: -4px -1468px
+	width: 86px
+	height: 112px
+
 .icon-letter-l
-	background-position: -5px -695px
+	background-position: -4px -1584px
 	width: 80px
 	height: 119px
 
+.icon-letter-bottle-m
+	background-position: -4px -1707px
+	width: 78px
+	height: 103px
+
 .icon-letter-b
-	background-position: -5px -819px
+	background-position: -4px -1814px
 	width: 71px
 	height: 105px
+
+.icon-letter-r
+	background-position: -4px -1923px
+	width: 65px
+	height: 84px
+
+.icon-letter-e
+	background-position: -4px -2011px
+	width: 63px
+	height: 83px
+
+.icon-letter-z
+	background-position: -73px -1923px
+	width: 55px
+	height: 77px
