--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -124,6 +124,11 @@ html(lang='ru')
           '01',
           'Home',
           'Home page'
+        ], [
+          'landing.html',
+          '02',
+          'Home landing',
+          'Landing page'
         ]
       ];
     header.
