--- a/src/styles/components/benefits.sass
+++ b/src/styles/components/benefits.sass
@@ -24,7 +24,7 @@
 			width: 33.33333%
 		+xs
 			width: 100%
-			padding: 0 10px 15px
+			padding: 0 10px 25px
 		
 		&:hover #{$parent}-pic
 			transform: rotate(720deg) scale(1.25)
@@ -44,3 +44,6 @@
 				+lg
 					margin-bottom: 0
 					transform: scale(.8)
+				+xs
+					transform: none
+					margin-bottom: 10px
