--- a/src/styles/components/c-tabs.sass
+++ b/src/styles/components/c-tabs.sass
@@ -4,6 +4,14 @@
 	$parent: &
 	+lg
 		margin-bottom: 20px
+	&_lessons
+		margin-bottom: 0
+	&__title
+		margin-bottom: 20px
+		+f('geo-700', 25)
+		color: $white
+		+xs
+			text-align: center
 	&__tabs-nav
 		position: relative
 		display: flex
@@ -16,6 +24,13 @@
 			flex-wrap: wrap
 		+xs
 			margin-bottom: 20px
+		#{$parent}_lessons &
+			margin-bottom: 0
+			+sm
+				flex-direction: column
+				align-items: flex-start
+		#{$parent}_landing &
+			margin-bottom: 30px
 	&__tabs-el
 		position: relative
 		height: 62px
@@ -37,6 +52,20 @@
 			flex-basis: 50%
 		+xs
 			flex-basis: 100%
+		#{$parent}_lessons &
+			max-width: 230px
+			font-size: 15px
+			height: 62px
+			line-height: 19px
+			padding: 10px
+			+xs
+				flex: 1 0 62px
+				max-width: none
+				line-height: 37px
+				&:not(:first-child)
+					margin-top: -3px
+		#{$parent}_landing &
+			max-width: 245px
 		&.is-active
 			pointer-events: none
 			color: $black
@@ -151,3 +180,124 @@
 				pointer-events: none
 				+coverdiv
 				background: rgba($black, .1)
+
+	&__filter
+		display: flex
+		align-items: flex-start
+		justify-content: space-between
+		margin-bottom: 40px
+		+xs
+			flex-wrap: wrap
+			justify-content: center
+		&-title
+			margin-bottom: 20px
+			+f('geo-700', 20)
+			color: $white
+		&-col
+			+xs
+				flex: 0 1 auto
+			&:nth-child(2)
+				flex: 0 0 230px
+				+xs
+					display: none
+				
+	&__tab-inner
+		font-size: 0
+		margin: 0 -15px
+		text-align: center
+		+xs
+			margin: 0
+	
+	&__item
+		position: relative
+		display: inline-block
+		vertical-align: top
+		width: calc(33.33333% - 30px)
+		padding: 20px 25px 110px
+		margin: 0 15px 30px
+		min-height: 490px
+		background: $white
+		text-align: left
+		+md
+			width: calc(50% - 30px)
+			max-width: 350px
+		+xs
+			width: 100%
+			margin: 0 0 30px
+		&-icon-wrap
+			height: 120px
+			display: flex
+		&-icon
+			&.icon-letter-r
+				position: relative
+				top: 5px
+				width: 68px
+			&.icon-letter-m
+				position: relative
+				top: 15px
+			&.icon-letter-i
+				width: 92px
+			&.icon-letter-z
+				position: relative
+				top: 15px
+		&-info
+			margin-bottom: 15px
+			+f('geo-700')
+		&-title
+			color: #3b3b3b
+			font-size: 25px
+		&-subtitle
+			color: #25a84a
+			+f('geo-700', 13, 22)
+		&-descr
+			min-height: 145px
+			color: $black
+			+f('geo-500')
+			line-height: 22px
+			font-size: 15px
+		&-price
+			display: flex
+			align-items: center
+			+f('geo-700')
+			text-transform: uppercase
+			font-size: 13px
+			+xs
+				flex-direction: column
+			span
+				font-size: 22px
+				vertical-align: -2px
+			&-info
+				position: relative
+				padding-left: 10px
+				margin-left: 10px
+				+f('geo-500')
+				color: #8d8d8d
+				text-transform: none
+				+xs
+					margin-left: 0
+					padding-left: 0
+				&::after
+					position: absolute
+					height: 16px
+					top: 50%
+					margin-top: -8px
+					left: 0
+					width: 2px
+					background: #8d8d8d
+					content: ''
+					+xs
+						display: none
+				span
+					line-height: 24px
+					font-size: 14px
+					
+		&-btn
+			position: absolute
+			left: 50%
+			margin-left: -102px
+			bottom: 40px
+			min-width: 204px
+			height: 50px
+			line-height: 45px
+			padding: 0 15px
+			border: 3px solid transparent
