--- a/src/template/components/thanks.pug
+++ b/src/template/components/thanks.pug
@@ -19,14 +19,14 @@ if thanks.allBtn ? thanks.allBtn : thanks.allBtn = 'Смотреть все сп
 				+e.tab
 					+e.inner
 						+e.video-item
-							+e.video-text
+							+e.video-text.js-video-text
 								+e.H5.video-title Милана
 								+e.P посещает Бэби-клуб более 3 лет
 							+e.video-trigger.js-play-video
 							iframe(src='https://www.youtube.com/embed/DpMrNGG3S3I?rel=0&controls=0&showinfo=0&enablejsapi=1', frameborder='0', gesture='media', allow='encrypted-media', allowfullscreen='')
 
 						+e.video-item
-							+e.video-text
+							+e.video-text.js-video-text
 								+e.H5.video-title Вероника
 								+e.P Мама Глеба и Матвея Более года в Бэби-клубе
 							+e.video-trigger.js-play-video
@@ -35,13 +35,13 @@ if thanks.allBtn ? thanks.allBtn : thanks.allBtn = 'Смотреть все сп
 				+e.tab
 					+e.inner
 						+e.video-item
-							+e.video-text
+							+e.video-text.js-video-text
 								+e.H5.video-title Милана
 								+e.P посещает Бэби-клуб более 3 лет
 							+e.video-trigger.js-play-video
 							iframe(src='https://www.youtube.com/embed/5zDWEog9CJE?rel=0&controls=0&showinfo=0&enablejsapi=1', frameborder='0', gesture='media', allow='encrypted-media', allowfullscreen='')
 						+e.video-item
-							+e.video-text
+							+e.video-text.js-video-text
 								+e.H5.video-title Вероника
 								+e.P Мама Глеба и Матвея Более года в Бэби-клубе
 							+e.video-trigger.js-play-video
@@ -50,13 +50,13 @@ if thanks.allBtn ? thanks.allBtn : thanks.allBtn = 'Смотреть все сп
 				+e.tab
 					+e.inner
 						+e.video-item
-							+e.video-text
+							+e.video-text.js-video-text
 								+e.H5.video-title Милана
 								+e.P посещает Бэби-клуб более 3 лет
 							iframe(src='https://www.youtube.com/embed/DpMrNGG3S3I?rel=0&controls=0&showinfo=0&enablejsapi=1', frameborder='0', gesture='media', allow='encrypted-media', allowfullscreen='')
 
 						+e.video-item
-							+e.video-text
+							+e.video-text.js-video-text
 								+e.H5.video-title Вероника
 								+e.P Мама Глеба и Матвея Более года в Бэби-клубе
 							iframe(src='https://www.youtube.com/embed/3roikLviTGs?rel=0&controls=0&showinfo=0&enablejsapi=1', frameborder='0', gesture='media', allow='encrypted-media', allowfullscreen='')
@@ -64,12 +64,12 @@ if thanks.allBtn ? thanks.allBtn : thanks.allBtn = 'Смотреть все сп
 				+e.tab
 					+e.inner
 						+e.video-item
-							+e.video-text
+							+e.video-text.js-video-text
 								+e.H5.video-title Милана
 								+e.P посещает Бэби-клуб более 3 лет
 							iframe(src='https://www.youtube.com/embed/5zDWEog9CJE?rel=0&controls=0&showinfo=0&enablejsapi=1', frameborder='0', gesture='media', allow='encrypted-media', allowfullscreen='')
 						+e.video-item
-							+e.video-text
+							+e.video-text.js-video-text
 								+e.H5.video-title Вероника
 								+e.P Мама Глеба и Матвея Более года в Бэби-клубе
 							iframe(src='https://www.youtube.com/embed/OhEANdHh3e0?rel=0&controls=0&showinfo=0&enablejsapi=1', frameborder='0', gesture='media', allow='encrypted-media', allowfullscreen='')
