--- a/src/styles/components/library.sass
+++ b/src/styles/components/library.sass
@@ -1,5 +1,8 @@
 .library
-	background: url("../img/bg/library_bg.png") no-repeat 50% 50%/cover
+	position: relative
+	background: #703782
+	+xs
+		background: url("../img/bg/library_bg.png") no-repeat 50% 50%/cover
 	&__container
 		padding: 0 50px
 		+lg
