--- a/src/template/components/benefits.pug
+++ b/src/template/components/benefits.pug
@@ -1,10 +1,9 @@
 if benefits ? benefits : benefits = []
-if benefits.title ? benefits.title : benefits.title = 'Бэби-клуб - это'
 
 //begin benefits
 +b.SECTION.benefits.section(data-anchor='pageThree' class= benefits.classMod ? benefits.classMod : '')
 	+e.container.container
-		+e.H2.title.title._black(data-anim-title='')= benefits.title
+		+e.H2.title.title._black(data-anim-title='') Бэби-клуб &#8212 это
 		-
 			lettersList = [{
 			picMod: 'icon-letter-f',
