--- a/src/template/components/mission.pug
+++ b/src/template/components/mission.pug
@@ -14,7 +14,7 @@ if mission.descr ? mission.descr : mission.descr = 'Делать детей сч
 				}, {
 				countMod: 'purple',
 				count: '75',
-				text: 'города мира'
+				text: 'городов'
 				}, {
 				countMod: 'orange',
 				count: '22000',
