--- a/src/template/components/project.pug
+++ b/src/template/components/project.pug
@@ -11,26 +11,27 @@ if project.title ? project.title : project.title = 'Наши проекты'
 				projList = [{
 				img: 1,
 				title: 'Школа «Белая ворона»',
-				descr: 'Друзья! Интеллектуальные игры — продолжаются! Наша серия тетрадей «Бэби-клуб у вас дома» издательства'
+				descr: 'Это школы, где дети находят свое предназначение, учатся сомневаться, думать, расставлять приоритеты и уверенно чувствовать себя в общении с людьми любого возраста.'
 				}, {
 				img: 2,
 				title: 'KIDFriendly',
-				descr: 'Друзья! Интеллектуальные игры — продолжаются! Наша серия тетрадей «Бэби-клуб у вас дома» издательства'
+				descr: 'Некоммерческий проект Kid-Friendly. Здесь рады детям. Более 1700 организаций — от кафе до офисов банков — рады предложить детям попить воды и «помыть руки».'
 				}, {
 				img: 3,
 				title: 'KIDX - онлайн школа',
-				descr: 'Друзья! Интеллектуальные игры — продолжаются! Наша серия тетрадей «Бэби-клуб у вас дома» издательства'
+				descr: 'Оффлайн и онлайн-тренинги для родителей, нянь и не только. Про понимание и принятие, осознанность и уважение, любовь и заботу друг о друге.'
 				}, {
 				img: 4,
 				title: 'Отцы и дети: инструкция по применению',
-				descr: 'Друзья! Интеллектуальные игры — продолжаются! Наша серия тетрадей «Бэби-клуб у вас дома» издательства'
+				descr: 'Персональный проект Юрия Белонощенко, папы пятерых детей. Это цикл встреч-интервью с известными папами, которые делятся своими жизненными принципами на воспитание детей.'
 				}, {
-				title: 'Арина Родионовна',
-				descr: 'Друзья! Интеллектуальные игры — продолжаются! Наша серия тетрадей «Бэби-клуб у вас дома» издательства'}]
+				img: 5,
+				title: 'Суперняня',
+				descr: 'Серия тренингов для тех, кто уже няня, или тех, кто задумывается ею стать. Коллекция бесценного опыта Бэби-клуба по общению с детьми и родителями передается в руки няне, мечтающей быть суперняней.'}]
 
 			mixin projItem(item)
 				+e.item(data-anim='')
-					+e.item-pic
+					+e.A.item-pic(href='#!')
 						if item.img
 							+e.IMG(src=`static/img/content/project-${item.img}.png` alt='image')
 					+e.H6.item-title= item.title
