--- a/src/template/pages/landing.pug
+++ b/src/template/pages/landing.pug
@@ -36,7 +36,7 @@ block variables
 	-footerClass = ['_landing']
 
 block main
-	-screen = {classMod: '_landing', title: 'бэби-клуб', subTitle: 'в воскресенске на ленина'}
+	-screen = {classMod: '_landing', title: 'бэби-клуб', subTitle: 'в воскресенске на ленина', actions: false}
 	include ../components/screen
 
 	include ../components/subs-block
