--- a/src/styles/components/screen.sass
+++ b/src/styles/components/screen.sass
@@ -1,4 +1,5 @@
 .screen
+	$parent: &
 	position: relative
 	z-index: -1
 	padding-top: 120px !important
@@ -31,6 +32,8 @@
 			margin-top: 160px
 		+xs
 			margin-top: 0
+		#{$parent}_landing &
+			margin-bottom: 0
 		p
 			max-width: 500px
 			margin: 0 auto
