--- a/src/template/components/library.pug
+++ b/src/template/components/library.pug
@@ -1,5 +1,5 @@
 if library ? library : library = []
-if library.title ? library.title : library.title = 'БЭБибЛИОТЕКА'
+if library.title ? library.title : library.title = 'Бэби-библиотека'
 
 //begin library
 +b.SECTION.library.section(class= library.classMod ? library.classMod : '')
@@ -25,3 +25,5 @@ if library.title ? library.title : library.title = 'БЭБибЛИОТЕКА'
 				+e.content-actions
 					+e.A.content-btn.btn._yellow(href='#!') Получить книгу на e-mail
 					+e.A.content-btn.btn._purple(href='#!') Смотреть всю Бэбиблиотеку
+
+	//+b.particles#js-nuts-particles
